@@ -765,9 +765,9 @@ void G4RunManager::ConstructScoringWorlds()
           {
             pmanager->AddProcess(theParallelWorldProcess);
             if(theParallelWorldProcess->IsAtRestRequired(particle))
-            { pmanager->SetProcessOrdering(theParallelWorldProcess, idxAtRest, 9999); }
+            { pmanager->SetProcessOrdering(theParallelWorldProcess, idxAtRest, 9900); }
             pmanager->SetProcessOrderingToSecond(theParallelWorldProcess, idxAlongStep);
-            pmanager->SetProcessOrdering(theParallelWorldProcess, idxPostStep, 9999);
+            pmanager->SetProcessOrdering(theParallelWorldProcess, idxPostStep, 9900);
           }
         }
       }
